Changed carousel heights in different views. Fixed z-index issue with sub headers. Some code cleanup

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,8 +37,7 @@
 /*Carousel*/
 .jcarousel {
   position: relative;
-  overflow: hidden;
-  width: 100%; }
+  overflow: hidden; }
 
 .jcarousel ul {
   width: 20000em;
@@ -56,8 +55,8 @@
   left: 50%;
   -webkit-transform: translateX(-50%);
           transform: translateX(-50%);
-  z-index: 9999;
-  font-size: 1.7em;
+  z-index: 1;
+  font-size: 1.5em;
   color: #ECF0F1; }
 
 .sub-head-third {
@@ -65,11 +64,18 @@
 
 img {
   width: 100%;
-  height: 100vh; }
+  height: 35em; }
+
+@media screen and (min-width: 768px) {
+  img {
+    height: 40em; } }
 
 @media screen and (min-width: 1024px) {
   .sub-head {
-    left: 40%; } }
+    left: 40%;
+    font-size: 1.7em; }
+  img {
+    height: 100vh; } }
 
 /************/
 /* Info Section */
@@ -173,10 +179,6 @@ body {
   color: #ECF0F1; }
   .grid p {
     margin: 0.5em; }
-
-@media screen and (min-width: 768px) {
-  header .jssor-container #jssor_1 {
-    height: 600px; } }
 
 @media screen and (min-width: 1024px) {
   header {
