--- a/sass/components/components.sass
+++ b/sass/components/components.sass
@@ -49,7 +49,7 @@
 .jcarousel 
     position: relative
     overflow: hidden
-    width: 100%
+    // width: 100%
 
 .jcarousel ul 
     width: 20000em
@@ -70,8 +70,8 @@
 	top: 4em
 	left: 50%
 	transform: translateX(-50%)
-	z-index: 9999
-	font-size: 1.7em
+	z-index: 1
+	font-size: 1.5em
 	color: $light-grey
 
 // .sub-head-first
@@ -87,12 +87,18 @@
 
 img
     width: 100%
-    height: 100vh 
+    height: 35em 
+
+@media screen and ($tablet)
+	img
+		height: 40em
 
 @media screen and ($desktop)
 	.sub-head
 		left: 40%
-
+		font-size: 1.7em
+	img
+		height: 100vh
 /************/
 
 /* Info Section */
