--- a/sass/header/header.sass
+++ b/sass/header/header.sass
@@ -1,53 +1,3 @@
-header
-	//Temp placeholder
-	// #jssor_1
-	// 	height: 100vh
-	// 	background-color: lightgrey
-	// height: 100vh
-	// width: 100vw
-
-// 	#bg-container
-// 		position: relative!important
-// 		height: 24em
-// 		text-align: center
-// 		background: url('../assets/pictures/cup-of-coffee.jpg') no-repeat center center
-// 		h1
-// 			display: inline-block
-// 			margin: 0.67em 0
-// 			position: relative
-// 			top: 4em
-// 			font-size: 2.5em
-// 			color: $light-grey
-// 			span
-// 				opacity: 0
-
-	.jssor-container
-		#jssor_1
-
-	// 	display: none
-
-@media screen and ($mobile-brkpnt1)
-	header
-		// .jssor-container
-		// 	display: block
-		// .mobile-header
-		// 	display: none
-
-
-
-@media screen and ($tablet)
-	header
-		.jssor-container
-			#jssor_1
-				height: 600px
-// 		#bg-container
-// 			text-align: left
-// 			margin-top: 3em
-// 			height: 35em
-// 			h1
-// 				left: 2em
-// 				font-size: 3em
-
 @media screen and ($desktop)
 	header
 		margin-top: 4em
